# Icebreaker2-PC

./: .gitignore  AGENTS.md  CMakeLists.txt  PORTING_NOTES.md  _port_script.py
assets/Movies/: movie00_welcome.icm  movie01_pits.icm  movie02_purple.icm  movie03_pink.icm  movie04_rainbow.icm  movie05_cyanide.icm  movie06_ice.icm  movie07_limeys.icm  movie08_rocks.icm  movie09_concrete.icm  movie10_lava.icm  movie11_chameleon.icm  movie12_slime.icm  movie13_lurkers.icm  movie14_swamp.icm  movie15_zombie.icm  movie16_meany.icm  movie17_victory.icm
build-aarch64/: .ninja_deps  .ninja_log  CMakeCache.txt  Icebreaker2  build.ninja  cmake_install.cmake
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  Icebreaker2  build.ninja  cmake_install.cmake
cmake/: aarch64-linux-gnu.cmake
portmaster/: README.md
portmaster/icebreaker2/: Icebreaker 2.sh  README.md  gameinfo.xml  port.json
portmaster/icebreaker2/icebreaker2/: icebreaker2.gptk
portmaster/icebreaker2/icebreaker2/licenses/: LICENSE.txt
src/: FontHandler.cpp  FontHandler.h  PlayMusic.cpp  PlayMusic.h  PrepareStream.cpp  PrepareStream.h  animation.cpp  animation.h  deadlist.cpp  deadlist.h  dudemeyer.cpp  dudemeyer.h  icebreaker.h  icetwo.cpp  landscape.cpp  landscape.h  levels.cpp  levels.h  levels_ib1.cpp  levels_ib1.h  levelstat.cpp  memcheck.cpp  memcheck.h  nvram.cpp  nvram.h  seeker.cpp  seeker.h  solids.cpp  solids.h  sounds.cpp  sounds.h  userif.cpp  userif.h  weapon.cpp  weapon.h
src/assets/: anim_loader.cpp  anim_loader.h  cel_loader.cpp  cel_loader.h
src/platform/: audio.cpp  audio.h  cinepak.h  filesystem.cpp  filesystem.h  graphics.cpp  graphics.h  input.cpp  input.h  platform.h  timer.cpp  timer.h  types.h  video.h
tools/: asset_case_audit.sh  build_portmaster_zip.py  convert_wav_to_ogg.js  extract_movies.js  extract_music.js  make_placeholder_screenshot.py  package-windows.ps1  patch_empty_seekers.js  setup_aarch64_sysroot.sh
